Fixed flase potives on epicurious.  Style tweaking on options page.  Made option discriptions clearer.

--- a/options.html
+++ b/options.html
@@ -26,7 +26,7 @@
             
             <h3>Google Docs Permissions</h3>
             <p><button id="revoke" onclick="logout();">Revoke Permissions</button></p>
-            <p>Clicking this button will revoke gRecipes access to your Google Docs.  You will be unable to save recipes until you grant gRecipes access again.  This can also be done from your <a title="Google Settings" href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens?hl=en">Google Settings</a> page.</p>
+            <p>Clicking this button will revoke gRecipes access to your Google Docs.  This can also be done from your <a title="Google Settings" href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens?hl=en">Google Settings</a> page.  You will be unable to save recipes until you grant gRecipes access again.</p>
             
             <h3>Automatic Open</h3>
             <p><input id="openonsave" type="checkbox" onclick="setOpenOnSave();" /> Automatically open a new recipe when created.</p>
