Added google analytics fixes from main grecipes

--- a/background.html
+++ b/background.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="lib/chrome_ex_oauthsimple.js"></script>
     <script type="text/javascript" src="lib/chrome_ex_oauth.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="lib/google_analytics.js"></script>
   </head>
   <body>
   </body>
