--- a/background.html
+++ b/background.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<!--
- * Copyright (c) 2010 The Chromium Authors. All rights reserved.  Use of this
- * source code is governed by a BSD-style license that can be found in the
- * LICENSE file.
- *
- * Author: Eric Bidelman <ericbidelman@chromium.org>
--->
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <script type="text/javascript" src="lib/chrome_ex_oauthsimple.js"></script>
-    <script type="text/javascript" src="lib/chrome_ex_oauth.js"></script>
-    <script type="text/javascript" src="js/background.js"></script>
-    <script type="text/javascript" src="lib/google_analytics.js"></script>
+    <meta charset="utf-8">
   </head>
   <body>
+    <!-- Nothing to see here! -->
+    <script type="text/javascript" src="js/lib/chrome_ex_oauthsimple.js"></script>
+    <script type="text/javascript" src="js/lib/chrome_ex_oauth.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-1.5.min.js"></script>
+    <script type="text/javascript" src="js/lib/crunch.js"></script>
+    <script type="text/javascript" src="js/lib/json_sans_eval.js"></script>
+    <script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="js/lib/google_analytics.js"></script>
   </body>
 </html>
