--- a/chrome_ex_oauth.html
+++ b/chrome_ex_oauth.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
-<!--
- * Copyright (c) 2010 The Chromium Authors. All rights reserved.  Use of this
- * source code is governed by a BSD-style license that can be found in the
- * LICENSE file.
- *
- * Author: Eric Bidelman <ericbidelman@chromium.org>
--->
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>OAuth Redirect Page</title>
+    <meta charset="utf-8">
+    <title>OAuth Redirection</title>
     <style type="text/css">
       body {
         font: 16px Arial;
         color: #333;
       }
     </style>
+  </head>
+  <body onload="onLoad();">
+    Redirecting...
+    
     <script type="text/javascript" src="lib/chrome_ex_oauthsimple.js"></script>
     <script type="text/javascript" src="lib/chrome_ex_oauth.js"></script>
     <script type="text/javascript">
@@ -23,8 +20,5 @@
         ChromeExOAuth.initCallbackPage();
       };
     </script>
-  </head>
-  <body onload="onLoad();">
-    Redirecting... 
   </body>
 </html>
