Wowzer, whole big rewrite!

--- a/background.html
+++ b/background.html
@@ -5,12 +5,8 @@
   </head>
   <body>
     <!-- Nothing to see here! -->
-    <script type="text/javascript" src="js/lib/chrome_ex_oauthsimple.js"></script>
-    <script type="text/javascript" src="js/lib/chrome_ex_oauth.js"></script>
-    <script type="text/javascript" src="js/lib/jquery-1.5.min.js"></script>
-    <script type="text/javascript" src="js/lib/crunch.js"></script>
-    <script type="text/javascript" src="js/lib/json_sans_eval.js"></script>
-    <script type="text/javascript" src="js/background.js"></script>
-    <script type="text/javascript" src="js/lib/google_analytics.js"></script>
+    <script src="js/lib/jquery.js"></script>
+    <script src="js/lib/yepnope.js"></script>
+    <script src="js/grecipe.js"></script>
   </body>
 </html>
