--- a/chrome_ex_oauth.html
+++ b/chrome_ex_oauth.html
@@ -10,15 +10,13 @@
       }
     </style>
   </head>
-  <body onload="onLoad();">
+  <body>
     Redirecting...
     
-    <script type="text/javascript" src="lib/chrome_ex_oauthsimple.js"></script>
-    <script type="text/javascript" src="lib/chrome_ex_oauth.js"></script>
+    <script src="js/lib/chrome_ex_oauthsimple.js"></script>
+    <script src="js/lib/chrome_ex_oauth.js"></script>
     <script type="text/javascript">
-      function onLoad() {
-        ChromeExOAuth.initCallbackPage();
-      };
+      ChromeExOAuth.initCallbackPage();
     </script>
   </body>
 </html>
