--- a/background.html
+++ b/background.html
@@ -6,7 +6,11 @@
   <body>
     <!-- Nothing to see here! -->
     <script src="js/lib/jquery.js"></script>
-    <script src="js/lib/yepnope.js"></script>
+    <script src="js/lib/sha1.js"></script>
+    <script src="js/lib/mustache.js"></script>
+    <script src="js/lib/chrome_ex_oauthsimple.js"></script>
+    <script src="js/lib/chrome_ex_oauth.js"></script>
+    <script src="js/gdocs.js"></script>
     <script src="js/grecipe.js"></script>
   </body>
 </html>
