Renamed file because it was annoying me.

--- a/chrome_ex_oauth.html
+++ b/chrome_ex_oauth.html
@@ -4,16 +4,13 @@
     <meta charset="utf-8">
     <title>OAuth Redirection</title>
     <style type="text/css">
-      body {
-        font: 16px Arial;
-        color: #333;
-      }
+      body {color: #333}
     </style>
   </head>
   <body>
-    Redirecting...
+    <h1>Redirecting...</h1>
     
-    <script src="js/lib/chrome_ex_oauthsimple.js"></script>
+    <script src="js/lib/oauthsimple.js"></script>
     <script src="js/lib/chrome_ex_oauth.js"></script>
     <script type="text/javascript">
       ChromeExOAuth.initCallbackPage();
