--- a/background.html
+++ b/background.html
@@ -8,7 +8,7 @@
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/sha1.js"></script>
     <script src="js/lib/mustache.js"></script>
-    <script src="js/lib/chrome_ex_oauthsimple.js"></script>
+    <script src="js/lib/oauthsimple.js"></script>
     <script src="js/lib/chrome_ex_oauth.js"></script>
     <script src="js/gdocs.js"></script>
     <script src="js/grecipe.js"></script>
