Fixed link opening without bootstrapping with JavaScript. Added loadGrr_ function.

--- a/popup.html
+++ b/popup.html
@@ -24,8 +24,8 @@
           gRecipes needs your permission in order to
           save recipes to your Google Documents.  You can revoke this
           later in the <a title="Options" id="options_link"
-          href="options.html">options</a> or in your <a
-          title="Google Account Settings" id="googlesettings_link"
+          href="options.html" target="_blank">options</a> or in your <a
+          title="Google Account Settings" id="googlesettings_link" target="_blank"
           href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens">
           Google Settings</a>.
         </p>
@@ -37,8 +37,8 @@
       <h1>Recipe Saved!</h1>
       <p>
         View your new recipe in <a title="Google Documents" 
-        href="https://docs.google.com/">Google Documents</a> or open it
-        <a title="{{title}}" href="{{url}}">here</a>.
+        href="https://docs.google.com/" target="_blank">Google Documents</a> or open it
+        <a title="{{title}}" href="{{url}}" target="_blank">here</a>.
       </p>
     </script>
     
