Using persistence for a orm.

--- a/background.html
+++ b/background.html
@@ -8,6 +8,11 @@
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/sha1.js"></script>
     <script src="js/lib/mustache.js"></script>
+    <script src="js/lib/crunch.js"></script>
+    <script src="js/lib/json_sans_eval.js"></script>
+    <script src="js/lib/persistence.js"></script>
+    <script src="js/lib/persistence.store.sql.js"></script>
+    <script src="js/lib/persistence.store.websql.js"></script>
     <script src="js/lib/oauthsimple.js"></script>
     <script src="js/lib/chrome_ex_oauth.js"></script>
     <script src="js/gdocs.js"></script>
