--- a/options.html
+++ b/options.html
@@ -28,6 +28,9 @@
       <h3>Usage Statistics</h3>
       <p><input id="opt_sendanalytics" type="checkbox">
       <label for="opt_sendanalytics">Send Anonymous Usage Statistics.</label></p>
+
+      <h3>Grrs</h3>
+      <div id="grrsloaded"></div>
       
       <hr>
       
