Added priority to grrs and fixed bug for premeture grrloaded signal. Fixed links and removed workaround in popup. Added epicurious grr.

--- a/popup.html
+++ b/popup.html
@@ -24,9 +24,9 @@
           gRecipes needs your permission in order to
           save recipes to your Google Documents.  You can revoke this
           later in the <a title="Options" id="options_link"
-          href="options.html">options</a> or in your <a
+          href="options.html" target="new">options</a> or in your <a
           title="Google Account Settings" id="googlesettings_link"
-          href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens">
+          href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens" target="new">
           Google Settings</a>.
         </p>
       </div> <!--! end of #oauthbutton -->
@@ -37,8 +37,8 @@
       <h1>Recipe Saved!</h1>
       <p>
         View your new recipe in <a title="Google Documents" 
-        href="https://docs.google.com/">Google Documents</a> or open it
-        <a title="{{title}}" href="{{url}}">here</a>.
+        href="https://docs.google.com/" target="new">Google Documents</a> or open it
+        <a title="{{title}}" href="{{url}}" target="new">here</a>.
       </p>
     </script>
     
