Using handlebars.js for templating. Updated epicurious.grr.

--- a/background.html
+++ b/background.html
@@ -7,7 +7,7 @@
     <!-- Nothing to see here! -->
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/sha1.js"></script>
-    <script src="js/lib/mustache.js"></script>
+    <script src="js/lib/handlebars.js"></script>
     <script src="js/lib/crunch.js"></script>
     <script src="js/lib/json_sans_eval.js"></script>
     <script src="js/lib/persistence.js"></script>
