--- a/background.html
+++ b/background.html
@@ -17,5 +17,6 @@
     <script src="js/lib/chrome_ex_oauth.js"></script>
     <script src="js/gdocs.js"></script>
     <script src="js/grecipe.js"></script>
+    <script src="js/lib/google_analytics.js"></script><!-- Analytics must be last. -->
   </body>
 </html>
