--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/handlebars.js"></script>
     <script src="js/popup.js"></script>
-    <script src="js/lib/google_analytics.js"></script>
+    <script src="js/lib/google_analytics.js"></script><!-- Analytics must be last. -->
     
   </body>
 </html>
