Updated style fro options page and fixed corner of grecipe-128.png

--- a/options.html
+++ b/options.html
@@ -10,7 +10,7 @@
   
   <body>
     <div id="content">
-      <span id="logo"></span>
+      <img id="logo" src="img/grecipe-128.png">
       <h1>gRecipes Options</h1>
       
       <h3>Google Docs Permissions</h3>
