Added reset defaults button to options page.

--- a/options.html
+++ b/options.html
@@ -28,6 +28,8 @@
       <h3>Usage Statistics</h3>
       <p><input id="opt_sendanalytics" type="checkbox">
       <label for="opt_sendanalytics">Send Anonymous Usage Statistics.</label></p>
+
+      <button id="reset_defaults">Reset Defaults</button>
       
       <hr>
       
